syntax = "proto3";

package test;

option go_package = "util/proto/test";

message Primitives {
    bytes field_a  = 1;
    string field_b = 2;
    bool field_c   = 200;
    int32 field_d  = 201;
    uint32 field_e = 202;
    int64 field_f  = 203;
    uint64 field_g = 204;

    enum SomeEnum {
        UNKNOWN = 0;
        POSITIVE = 1;
        NEGATIVE = -1;
    }
    SomeEnum field_h = 300;
}

message RepPrimitives {
    repeated bytes field_a  = 1;
    repeated string field_b = 2;
    repeated int32 field_c  = 3;
    repeated uint32 field_d = 4;
    repeated int64 field_e  = 5;
    repeated uint64 field_f = 6;
}